# yourctrl

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  components.json  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: new-app-request.md  shortcut-correction.md
.github/workflows/: release.yml
Shortcuts/: 1password.json  3ds_max.json  7zip.json  ableton_live.json  access.json  adobe_acrobat_reader.json  adobe_xd.json  affinity_designer.json  after_effects.json  aimp.json  alacritty.json  android_studio.json  animate.json  antigravity_2.json  antigravity_ide.json  anytype.json  aquasnap.json  arc.json  audacity.json  audition.json  autocad.json  autodesk_fusion.json  autodesk_maya.json  autodesk_revit.json  avid_media_composer.json  bandicam.json  bitwarden.json  bitwig_studio.json  blender.json  brave.json  bridge.json  bruno.json  calculator.json  camtasia.json  canva.json  capcut.json  chatbox.json  chatgpt.json  cherry_studio.json  chrome.json  (+159 more)
data/: README.md
scripts/: gen-mock-data.mjs
src/: App.tsx  filter.ts  index.css  main.tsx  popover-control.ts  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/seed/: apps.json  process_aliases.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppCard.tsx  AppIcon.tsx  AppSidebar.tsx  CommandPopover.tsx  Dashboard.tsx  KeyCap.tsx  SettingsView.tsx  ShortcutExportSheet.tsx  ShortcutGroups.tsx  ShortcutListView.tsx  SuggestView.tsx  WindowControls.tsx
(+14 files in other folders)
